update website layout

--- a/index.html
+++ b/index.html
@@ -1,53 +1,37 @@
-<!doctype html>
-<!--
-  Material Design Lite
-  Copyright 2015 Google Inc. All rights reserved.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      https://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License
--->
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A portfolio template that uses Material Design Lite.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-	
-    <title>MDL-Static Website</title>
-	
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="css/styles.css" />
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
+  <link href="css/style.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div class="mdl-grid center-items">
-        <div class="mdl-cell mdl-cell--8-col">
-		    <div class="mdl-cell mdl-cell--12-col">
-			<div class="card-head mdl-card mdl-shadow--2dp">
-  <div class="mdl-card__title mdl-card--expand">
-    <h2 class="mdl-card__title-text">Jamie Cheng</h2>
-  </div>
-  <div class="head-info mdl-card__actions mdl-card--border">
-    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">Contact</a>
-    <div class="mdl-layout-spacer"></div>
-  </div>
-</div>
-			</div>
-		</div>
+  <div class="main">
+    <div class="container">
+      <div class="header">
+        <h1 id="name">Jamie Cheng</h1>
+        <p id="function">Electrical / Embedded systems engineer</p>
+      </div>
+      <div class="work">
+        <h3>Work</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sagittis libero neque, quis tempus ante rutrum consectetur. Vestibulum fermentum nisi sed ligula rhoncus cursus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur nec sagittis neque. Cras eu ipsum eros. Morbi tempor consectetur dictum. Fusce imperdiet dui odio, vestibulum interdum felis sagittis in. Nam eget convallis enim. </p>
+      </div>
+      <div class="education">
+        <h3>Education</h3>
+        <div><span class="year">2022 - present</span>Master engineering systems</div>
+        <div><span class="year">2019</span>Bachelor electrical engineering</div>
+        <div><span class="year">2015</span>Graduated for pre-higher education</div>
+      </div>
     </div>
-    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  </div>
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+  <script>
+  </script>
 </body>
 
 </html>
