added underline in sub-titles

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sagittis libero neque, quis tempus ante rutrum consectetur. Vestibulum fermentum nisi sed ligula rhoncus cursus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur nec sagittis neque. Cras eu ipsum eros. Morbi tempor consectetur dictum. Fusce imperdiet dui odio, vestibulum interdum felis sagittis in. Nam eget convallis enim. </p>
       </div>
       <div class="education">
-        <h3>Education</h3>
+        <h3 class="sub-title">Education</h3>
         <div><span class="year">2022 - present</span>Master engineering systems</div>
         <div><span class="year">2019</span>Bachelor electrical engineering</div>
         <div><span class="year">2015</span>Graduated for pre-higher education</div>
