--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title></title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fira+Code">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Permanent+Marker">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="css/style.css" rel="stylesheet" />
 </head>
 
@@ -18,7 +19,11 @@
       </div>
       <div class="work">
         <h3>Work</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sagittis libero neque, quis tempus ante rutrum consectetur. Vestibulum fermentum nisi sed ligula rhoncus cursus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur nec sagittis neque. Cras eu ipsum eros. Morbi tempor consectetur dictum. Fusce imperdiet dui odio, vestibulum interdum felis sagittis in. Nam eget convallis enim. </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sagittis libero neque, quis tempus ante rutrum
+          consectetur. Vestibulum fermentum nisi sed ligula rhoncus cursus. Pellentesque habitant morbi tristique
+          senectus et netus et malesuada fames ac turpis egestas. Curabitur nec sagittis neque. Cras eu ipsum eros.
+          Morbi tempor consectetur dictum. Fusce imperdiet dui odio, vestibulum interdum felis sagittis in. Nam eget
+          convallis enim. </p>
       </div>
       <div class="education">
         <h3 class="sub-title">Education</h3>
@@ -26,6 +31,18 @@
         <div><span class="year">2019</span>Bachelor electrical engineering</div>
         <div><span class="year">2015</span>Graduated for pre-higher education</div>
       </div>
+      <div class="links">
+        <h3>Links</h3>
+        <div><a class="link" href="https://github.com/jamiecheng">
+            <i class="fa fa-github"></i> @jamiecheng
+          </a>
+        </div>
+        <div><a class="link" href="https://www.linkedin.com/in/jamie-cheng-56298b178">
+            <i class="fa fa-linkedin-square"></i> @jamie-cheng-56298b178
+          </a>
+        </div>
+      </div>
+
     </div>
   </div>
   <script>
