updated education dates

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </div>
       <div class="education">
         <h3 class="sub-title">Education</h3>
-        <div><span class="year">2022 - present</span>Master engineering systems</div>
-        <div><span class="year">2019</span>Bachelor electrical engineering</div>
-        <div><span class="year">2015</span>Graduated for pre-higher education</div>
+        <div><span class="year">2021-present</span>Master engineering systems</div>
+        <div><span class="year">2015-2019</span>Bachelor electrical engineering</div>
+        <div><span class="year">2010-2015</span>Graduated for pre-higher education</div>
       </div>
       <div class="links">
         <h3>Links</h3>
